manifests/infrastructure/authelia/http-route.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: authelia-portal
  namespace: networking
spec:
  parentRefs:
    - name: edge
      namespace: networking
  hostnames:
    - "auth.mikolajmaciejak.dev"
  rules:
    - matches:
        - path:
            type: PathPrefix
            value: /
      backendRefs:
        - name: authelia
          port: 80
